adding landmark notification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,16 @@ add_subdirectory(libs/dlib)
 add_executable(FaceRecogClientCpp
         src/webcam_face_pose_ex.cpp
         )
+
 target_link_libraries(FaceRecogClientCpp
         ${OpenCV_LIBS}
         dlib::dlib
         )
+
+set(LANDMARK_FILE "${CMAKE_SOURCE_DIR}/res/shape_predictor_68_face_landmarks.dat")
+
+if (NOT EXISTS ${LANDMARK_FILE})
+    message(SEND_ERROR "You need dlib's default face landmarking model in order to run.\
+            http://dlib.net/files/shape_predictor_68_face_landmarks.dat.bz2 extract it to ${LANDMARK_FILE}"
+            )
+endif()
