--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+res/shape_predictor_68_face_landmarks.dat
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
