adding convert_to_jpeg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
-project(FaceRecogClientCpp)
+project(FaceRecogClientCpp CXX)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 find_package(OpenCV REQUIRED)
-include_directories(${OPENCV_INCLUDE_DIR})
-
-include_directories(src)
 
 add_subdirectory(libs/dlib)
 
@@ -18,6 +15,12 @@ add_executable(FaceRecogClientCpp
 target_link_libraries(FaceRecogClientCpp
         ${OpenCV_LIBS}
         dlib::dlib
+        )
+
+target_include_directories(FaceRecogClientCpp
+        PRIVATE
+            src
+            OpenCV::OpenCV
         )
 
 set(LANDMARK_FILE "${CMAKE_SOURCE_DIR}/res/shape_predictor_68_face_landmarks.dat")
