--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(libs/dlib)
 add_executable(FaceRecogClientCpp
         src/main.cpp
         src/face_recog_api/face_recog_api.cpp
+        src/face_recog_api/face_recog_service.cpp
         src/face_detect/face_detector.cpp
         src/qtglwebcamdemo.cpp
         src/qtglwebcamdemo.ui
