renaming qtglwebcamdemo to face_recog_demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_executable(FaceRecogClientCpp
         src/face_recog_api/face_recog_api.cpp
         src/face_recog_api/face_recog_service.cpp
         src/face_detect/face_detector.cpp
-        src/qtglwebcamdemo.cpp
+        src/face_recog_demo.cpp
         src/qtglwebcamdemo.ui
         src/qviewergl.cpp
         )
