--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ target_include_directories(FaceRecogClientCpp
 
 set(LANDMARK_FILE "${CMAKE_SOURCE_DIR}/res/shape_predictor_68_face_landmarks.dat")
 
+configure_file(${LANDMARK_FILE} shape_predictor_68_face_landmarks.dat COPYONLY)
 if (NOT EXISTS ${LANDMARK_FILE})
     message(SEND_ERROR "You need dlib's default face landmarking model in order to run.\
             http://dlib.net/files/shape_predictor_68_face_landmarks.dat.bz2 extract it to ${LANDMARK_FILE}"
