adding config notice

--- a/res/config.ini
+++ b/res/config.ini
@@ -1,3 +1,4 @@
+; Default configurations for the FaceRecogClient
 embedding_host_url = "http://localhost:5001/"
 tracking_host_url = "https://face.otep.ch/"
 location_name = "cam2"
