ignoring _CPack_Packages

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ res/shape_predictor_68_face_landmarks.dat
 # CMake
 cmake-build-debug/
 cmake-build-release/
+_CPack_Packages/
 
 # Mongo Explorer plugin:
 .idea/**/mongoSettings.xml
