--- a/res/config.ini
+++ b/res/config.ini
@@ -3,3 +3,4 @@ embedding_host_url = "http://localhost:5001/"
 tracking_host_url = "https://face.otep.ch/"
 location_name = "cam2"
 tracking_view_url = "https://face.otep.ch/locations/1/current"
+predictor_path = "./shape_predictor_68_face_landmarks.dat"
